# mcp-server-osascript

./: .gitignore  CLAUDE.md  README.md  README_CN.md  pyproject.toml
mcp_server_osascript/: __init__.py  executor.py  permissions.py  responses.py  security.py  server.py  ui.py
